# my-test-bot-repo2

./: .gitignore  Dockerfile  PROJECT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
azure/: container-app.bicep
charts/clawfs/: Chart.yaml  values.yaml
charts/clawfs/templates/: _helpers.tpl  deployment.yaml  pvc.yaml  secret.yaml  service.yaml
clawfs/: __init__.py  admin.py  admin_ui.html  api.py  audit.py  auth.py  cli.py  core.py  db.py  factory.py  ratelimit.py  storage.py  uploads.py
design/: ui.html
design/sprint2/: share.html  upload.html
docs/: DESIGN.md  SPEC.md  VISION.md
docs/blog/: 0-launch.md
docs/demo/: clawfs-90s.cast  demo.sh
docs/site/: index.md  large-files-and-tenants.md  operations.md  quickstart-cloud.md  quickstart-laptop.md  quickstart-vm.md
docs/sprint2/: AGENT_UX.md  CEO_MEMO.md  README.md  SPRINT2_PLAN.md
docs/sprint3/: SPRINT3_PROPOSAL.md
docs/sprint4/: SPRINT4_PROPOSAL.md
docs/sprint5/: SPRINT5_PROPOSAL.md
docs/sprint6/: RETRO.md  SPRINT6_PROPOSAL.md
scripts/: clawfs-up.sh
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/src/: index.ts
sdk/typescript/tests/: live.test.ts  unit.test.ts
tests/: test_admin_api.py  test_audit.py  test_auth.py  test_azure_storage.py  test_core.py  test_gcs_storage.py  test_quota.py  test_rate_limit.py  test_s3_storage.py  test_tenancy.py  test_uploads.py
